# NproVyvoj-2019

./: HelloWorld.txt
02-git/: protocol_kleplj.md
03-ant/: protocol_kleplj.md  zadani.txt
03-ant/ftp/: build.xml
04-make/: protocol-kleplj.md
04-make/mydb/: Makefile
04-make/mydb/src/: Makefile
05-build/: protocol-kleplj.md
05-build/mydb/: .gitignore  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
05-build/mydb/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
05-build/mydb/src/: Makefile  Makefile.am  Makefile.in
06-junit/: .project  protocol-kleplj.md
06-junit/Statistics/: pom.xml
06-junit/TestTreeMap/: pom.xml
07-debug/: protocol-kleplj.md
07-debug/bc-1.06.95/dc/: numeric.c
07-debug/bc-1.06.95/doc/: bc.info  dc.info
07-debug/cdc/: run.sh
07-debug/cdc-old/: Makefile
07-debug/cdc-old/src/: Aircraft.c  Aircraft.h  CallSign.h  Constants.h  Detector.c  Detector.h  FrameBuffer.h  ImmortalEntry.c  Motion.h  RawFrame.c  Reducer.h  Simulator.c  TransientDetector.c  TransientDetector.h  Vector2d.c  VectorMath.c  VectorMath.h  VoxelMap.h  helper.h
07-debug/cdc/src/: CDC.c  CDC.h  CallSign.c  Constants.c  FrameBuffer.c  HashMap.c  HashMap.h  ImmortalEntry.h  Motion.c  NanoClock.c  NanoClock.h  RawFrame.h  Reducer.c  Simulator.c  Simulator.h  StateTable.c  StateTable.h  Vector2d.h  (+6 more)
08-log/: protocol-kleplj.md
08-log/daisyfs/: daisy.txt
08-log/deos/: AbstractClockingDevice.cs  Assertion.cs  Budget.cs  CPU.cs  ChessTest.cs  Clock.cs  DEOS.cs  DEOSIdleThread.cs  DEOSKernel.cs  DEOSMainThread.cs  DEOSProcess.cs  DEOSThread.cs  DoubleLinkListNode.cs  NewTimer.cs  PeriodicClock.cs  PriorityListOfThreads.cs  ProcessConstraint.cs  Registry.cs  Scheduler.cs  StartOfPeriodEvent.cs  SynchObject.cs  Thread.cs  ThreadList.cs  ThreadListNode.cs  Timer.cs
08-log/sockets/: .gitignore  Makefile  README.md  build.sh  clean.sh  run.sh  run2.sh
apisign/: build.xml
cocome/: build.properties  build.xml
sockets/: Makefile  build.sh  clean.sh
sockets/src/: server.cpp  udp-client.cpp
(+80 files in other folders)
